# openvpc

./: .env.example  .gitignore  CONTRIB.md  Makefile  README.md  pyproject.toml
alembic/: env.py
ansible/: interface.yml  inventory.ini
app/: bootstrap.py  config.py  database.py  main.py  router.py
app/config/: bootstrap.py  db.py  db2.py  routers.py  settings.py
app/config_mod/: models.py  router.py  schemas.py  service.py
app/configuration/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
app/core/: device_vyos.py  utils.py
app/credential/: crud.py  model.py  models.py  router.py  schema.py  schemas.py  service.py
app/crud/: config_crud.py  router_crud.py  vpc_crud.py
app/device/: crud.py  factory.py  model.py  models.py  router.py  schema.py  schemas.py  service.py
app/models/: config_models.py  router_models.py  vpc_models.py
app/router/: schemas.py  service.py
app/router_mod/: models.py  router.py  schemas.py
app/routers/: config_router.py  router_router.py  vpc_router.py
app/schemas/: router_schemas.py  vpc_schemas.py
app/services/: netbox_service.py
app/vpc/: constants.py  dependencies.py  models.py  router.py  service.py
app/zone/: crud.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  schemas.py  service.py
dev/: Vagrantfile  create_db.py  docker-compose.yml  mysql-init.sh
migrations/models/: 0_20240307165539_init.py  0_20240321170037_init.py  1_20240307192410_update.py  1_20240321182619_update.py  2_20240308163614_update.py  3_20240308165807_update.py  4_20240312171200_update.py  5_20240313175109_update.py  6_20240314162658_update.py
openvpc/: alembic.ini  config.py  database.py  main.py  routers.py  settings.py
openvpc/alembic/: env.py
openvpc/crud/: config_crud.py  credential_crud.py  device_crud.py  router_crud.py  vpc_crud.py  zone_crud.py
openvpc/devices/: factory.py  vyos.py
openvpc/models/: config_models.py  credential_models.py  device_models.py  router_models.py  vpc_models.py  zone_models.py
openvpc/routes/: config_routes.py  credential_routes.py  device_routes.py  router_routes.py  test_routes.py  vpc_routes.py  zone_routes.py
openvpc/schemas/: config_schemas.py  credential_schemas.py  device_schemas.py  router_schemas.py  vpc_schemas.py  zone_schemas.py
src/: config.py  database.py  exceptions.py  main.py
src/ansible/: interface2.yml
src/config_set/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
tests/: conftest.py  fixtures.py
(+57 files in other folders)
