[tool.poetry]
name = "openvpc"
version = "0.1.0"
description = "open vpc service"
authors = ["Roberto Berto <roberto.berto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = {version = "^2.0.27", extras = ["asyncio"]}
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
pyvyos = {path = "../pyvyos"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
