[tool.poetry]
name = "openvpc"
version = "0.1.0"
description = "open vpc service"
authors = [
    "Roberto Berto <roberto.berto@gmail.com>", 
    "Fabrício Radtke <fabriciossj@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
alembic = "^1.13.1"
loguru = "^0.7.2"
pytest = "^8.0.2"
httpx = "^0.27.0"
faker = "^23.3.0"
tortoise-orm = "^0.20.0"
aiomysql = "^0.2.0"
aerich = "^0.7.2"
pyvyos = {path = "../pyvyos"}
pytest-asyncio = "^0.23.5.post1"

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.*:", 
    "ignore::DeprecationWarning:tortoise.*:",
    "ignore::DeprecationWarning:httpx.*:"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
